--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" style="--viewport-height: 747px">
+<html
+  lang="en"
+  style="
+    --dynamic-height: 75vh;
+    --rock-width: 60%;
+    --shadow-width: 67%;
+    --dynamic-height-poup: 100vh;
+    --dynamic-popup-zoom: 0.85;
+    --menu-zoom: 0.77;
+  "
+>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title></title>
 
-    <link href="/src/assets/css/index-jXuDhURr.css" rel="stylesheet" />
+    <link href="/src/assets/css/style.min.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="theme-default">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <!-- <script>
-      function updateClass() {
-        if (window.innerWidth > 800) {
-          document.documentElement.classList.add("is-web");
-          document.documentElement.classList.remove("is-mobile");
-        } else {
-          document.documentElement.classList.add("is-mobile");
-          document.documentElement.classList.remove("is-web");
-        }
-      }
-      updateClass();
-
-      // Run on resize
-      window.addEventListener("resize", updateClass);
-    </script> -->
   </body>
 </html>
